plugins {
  id 'net.fabricmc.fabric-loom' version '1.16.+'
  id 'maven-publish'
  id "com.modrinth.minotaur" version "2.+"
}

version = project.mod_version
group = project.maven_group

loom {
  accessWidenerPath = file("src/main/resources/creator_tools.accesswidener")
}

repositories {
  maven { url = "https://maven.nucleoid.xyz/" }
  maven { url = "https://maven.gegy.dev/" }
  maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }

}

dependencies {
  minecraft "com.mojang:minecraft:${project.minecraft_version}"
  implementation "net.fabricmc:fabric-loader:${project.loader_version}"

  implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

  implementation include("eu.pb4:polymer-core:${project.polymer_version}")
  implementation include("eu.pb4:polymer-virtual-entity:${project.polymer_version}")
  implementation include("xyz.nucleoid:server-translations-api:${project.server_translations_api_version}") {
      exclude(group: "net.fabricmc.fabric-api")
  }
  implementation include("xyz.nucleoid:fantasy:${project.fantasy_version}") {
      exclude(group: "net.fabricmc.fabric-api")
  }
  implementation(include("me.lucko:fabric-permissions-api:${project.fabric_permissions_api_version}"))

  implementation include("xyz.nucleoid:map-templates:${project.map_templates_version}")
}

processResources {
  inputs.property "version", project.version

  filesMatching("fabric.mod.json") {
    expand "version": project.version
  }
}

tasks.withType(JavaCompile).configureEach {
  it.options.encoding = "UTF-8"
  it.options.release = 25
}

java {
  withSourcesJar()

  sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

jar {
  from("LICENSE") {
    rename { "${it}_${project.archivesBaseName}"}
  }
}

if (System.getenv("MODRINTH")) {
  modrinth {
    token = System.getenv("MODRINTH")
    projectId = 'HDocER98'// The ID of your modrinth project, slugs will not work.
    versionNumber = "" + version // The version of the mod to upload.
    versionType = "release"
    uploadFile = jar // This links to a task that builds your mod jar and sets "uploadFile" to the mod jar.
    gameVersions = [((String) project.minecraft_version)]
    loaders = ["fabric", "quilt"]
  }

  jar {
    finalizedBy project.tasks.modrinth
  }
}